src/css-components/WeatherApp.css
.app {
    background-image: url("../assets/weatherBackground.avif");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    background-blend-mode: multiply;
    background-color: var(--sb6);
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    height: 100vh;
    flex-direction: column;
    text-align: center;
    text-transform: uppercase;
    font-style: italic;
}

.input-container {
    position: absolute;
    top: 22px;
    height: 67px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.search-box {
    width: 100%;
    position: relative;
    top: 3px;
    display: flex;
    align-items: center;
}

.search-box i {
    color: rgba(255, 255, 255, 0.4);
    font-size: 1.25rem;
    padding-left: 1vw;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    left: 2%;
}

.search-box .search-bar {
    font-size: 1.5rem;
    width: 70vw;
    max-width: 665px;
    height: 55px;
    margin: auto;
    border-radius: 11px;
    text-align: center;
    font-style: italic;
    background-color: transparent;
    color: white;
    letter-spacing: 3px;
    border: 1px solid rgba(255, 255, 255, .8);
    outline: none;
}

.search-box:hover .search-bar:hover {
    cursor: pointer;
}

::placeholder {
    color: antiquewhite;
    font-weight: bold;
    font-size: 1rem;
    letter-spacing: .75vw;
    text-transform: uppercase;
}

.search-box .search-bar:focus {
    border: 1px ridge white;
    background-color: rgba(255, 255, 255, 0.1);
    outline: none;
}

.weather-container {
    width: 75%;
    background-color: rgba(77, 77, 77, 0.4);
    border-radius: 11px;
    padding: 1em;
}

.location-box .location {
    color: whitesmoke;
    font-size: 2rem;
    letter-spacing: .5vw;
}

.location-box .date {
    color: whitesmoke;
    font-size: 1.1rem;
    letter-spacing: .5vw;
    padding-top: 1.25em;
    padding-bottom: 1em;
}

.weather-box {
    text-align: center;
}

.weather-box .temp {
    display: inline-block;
    background-color: rgba(22, 22, 22, 0.4);
    border-radius: 16px;
    padding: 0 5vw;
    color: whitesmoke;
    font-size: 4rem;
    letter-spacing: 1.5vw;
    margin: .25em;
    padding: .5em;
}

.weather-box .weather {
    color: whitesmoke;
    font-size: 2rem;
    letter-spacing: .5vw;
}

